--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -17,7 +17,7 @@
   <link href="/assets/bootstrap_responsive_min.css" rel="bootstrap_responsive_min" type="text/css">
 
 
-  <script src="js/libs/modernizr-2.5.3.min.js" type="text/javascript"></script>
+  <script src="/assets/libs/modernizr-2.5.3.min.js" type="text/javascript"></script>
 </head>
 <body>
   <header>
@@ -34,7 +34,7 @@
   <!-- JavaScript at the bottom for fast page loading -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="js/libs/jquery-1.7.1.min.js"></script>
+  <script src="/assets/libs/jquery-1.7.1.min.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
   <script src="/assets/plugins.js"></script>
