--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,6 +8,6 @@
         .span6 
           %img.flickr{src:""}
         .span6
-          %img.500px{src:""}
+        //%img.500px{src:""}
     = render "footer"
   = render "javascripts"
