--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,6 +8,7 @@
         .span6 
           %img.flickr{src:""}
         .span6
-          %img.500px{src:""}
+          //%img.500px{src:""}
     = render "footer"
+  %script{src:"http://connect.soundcloud.com/sdk.js"}
   = render "javascripts"
